--- a/SkillBridge/Views/JobPosts/Details.cshtml
+++ b/SkillBridge/Views/JobPosts/Details.cshtml
@@ -1,54 +1,46 @@
 ﻿@model SkillBridge.Models.JobPost
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Job Details";
 }
 
-<h1>Details</h1>
+<div class="max-w-3xl mx-auto mt-8 p-6 bg-white shadow rounded-lg">
+    <h1 class="text-2xl font-semibold text-gray-800 mb-6">Job Post Details</h1>
 
-<div>
-    <h4>JobPost</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.JobTitle)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.JobTitle)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CompanyName)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CompanyName)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Location)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Location)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Description)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Description)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SkillsRequired)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SkillsRequired)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.PostedDate)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PostedDate)
-        </dd>
-    </dl>
-</div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <div class="space-y-4">
+        <div>
+            <span class="font-semibold text-gray-600">Job Title:</span>
+            <p class="text-gray-800">@Model.JobTitle</p>
+        </div>
+
+        <div>
+            <span class="font-semibold text-gray-600">Company Name:</span>
+            <p class="text-gray-800">@Model.CompanyName</p>
+        </div>
+
+        <div>
+            <span class="font-semibold text-gray-600">Location:</span>
+            <p class="text-gray-800">@Model.Location</p>
+        </div>
+
+        <div>
+            <span class="font-semibold text-gray-600">Description:</span>
+            <p class="text-gray-800">@Model.Description</p>
+        </div>
+
+        <div>
+            <span class="font-semibold text-gray-600">Skills Required:</span>
+            <p class="text-gray-800">@Model.SkillsRequired</p>
+        </div>
+
+        <div>
+            <span class="font-semibold text-gray-600">Posted Date:</span>
+            <p class="text-gray-800">@Model.PostedDate.ToString("yyyy-MM-dd")</p>
+        </div>
+    </div>
+
+    <div class="mt-6 flex gap-4">
+        <a asp-action="Edit" asp-route-id="@Model?.Id" class="px-4 py-2 bg-yellow-500 text-white rounded hover:bg-yellow-600">Edit</a>
+        <a asp-action="Index" class="px-4 py-2 bg-gray-300 text-gray-800 rounded hover:bg-gray-400">Back to List</a>
+    </div>
 </div>
