--- a/SkillBridge/Views/Client/Dashboard.cshtml
+++ b/SkillBridge/Views/Client/Dashboard.cshtml
@@ -1,5 +1,12 @@
-﻿@{
-    ViewData["Title"] = "Client Dashboard";
+﻿@using Microsoft.AspNetCore.Identity
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
+
+@{
+    ViewData["Title"] = "Clients Dashboard";
 }
-<h1 class="text-2xl font-bold text-green-700">Welcome, Client!</h1>
+
+<h1>Welcome, Clients!</h1>
+
+<h1 class="text-2xl font-bold text-indigo-700">Welcome, Developer!</h1>
 <p class="mt-2 text-gray-600">This is your dashboard.</p>
