Apply for job update

--- a/SkillBridge/Views/Client/Dashboard.cshtml
+++ b/SkillBridge/Views/Client/Dashboard.cshtml
@@ -12,7 +12,7 @@
     </div>
 
     <div class="mt-6 space-y-3">
-        <a asp-controller="JobPost" asp-action="Create" class="inline-block bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">
+        <a asp-controller="JobPosts" asp-action="Create" class="inline-block bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">
             Post a Job
         </a>
         <a asp-controller="Account" asp-action="EditProfile" class="inline-block bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-700">
