--- a/SkillBridge/Views/Developer/Dashboard.cshtml
+++ b/SkillBridge/Views/Developer/Dashboard.cshtml
@@ -12,7 +12,7 @@
     </div>
 
     <div class="mt-6 space-y-3">
-        <a asp-controller="JobPost" asp-action="Index" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">
+        <a asp-controller="JobPosts" asp-action="Index" class="inline-block bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">
             Browse Job Posts
         </a>
         <a asp-controller="Account" asp-action="EditProfile" class="inline-block bg-gray-600 text-white px-4 py-2 rounded hover:bg-gray-700">
